fix: descriptions to comment the code

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="assets/icons/architectelogo.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
@@ -109,9 +110,6 @@
       <div class="form-group">
         <label for="categorySelect">Catégorie</label>
         <select id="categorySelect" name="category">
-          <option value="1">Objets</option>
-          <option value="2">Appartements</option>
-          <option value="3">Hotels & restaurants</option>
         </select>
       </div>
       </div>
