build: filters buttons's background color set to green when active

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,6 +41,7 @@
       <h2>Mes Projets</h2>
     </div>
     <div class="filters">
+      <button class="filter-btn btn-all active">Tous</button>
     </div>
     <div class="gallery">
 		</div>
